# RL_football

./: .gitignore  README.md  generate_gif.py  make_demo_gifs.py  my_vision.md  pyproject.toml  train_ppo.py
examples/: headless_rollout.py  multiagent_scenario7.py  render_scenario1.py  staged_training_stub.py  training_example.py
football_rl/: __init__.py
football_rl/configs/: __init__.py  defaults.py
football_rl/core/: __init__.py  actions.py  events.py  observation.py  simulator.py  types.py
football_rl/entities/: __init__.py  ball.py  base.py  obstacle.py  player.py
football_rl/physics/: __init__.py  collision.py  engine.py
football_rl/policies/: __init__.py  scripted.py  self_play.py
football_rl/render/: __init__.py  pygame_renderer.py
football_rl/rewards/: __init__.py  base.py  manager.py  terms.py
football_rl/scenarios/: __init__.py  base.py  common.py  registry.py  scenario_duel.py  scenario_full_match.py  scenario_moving_wall.py  scenario_pass_goalie.py  scenario_pass_then_goal.py  scenario_pass_wall.py  scenario_single_striker.py
football_rl/training/: __init__.py  curriculum.py  policies.py  ppo.py
football_rl/utils/: __init__.py  gym_compat.py  math_utils.py
football_rl/wrappers/: __init__.py  ball_approach.py  flatten.py  gym_env.py  multi_agent_env.py
tests/: test_ball_kick.py  test_goal.py  test_multiagent.py  test_reset.py  test_scenarios.py
